# python-sleep-absolute

./: 0 Sleep until an absolute time with asyncio r2.md  0 sleep timerfd.md  README.md  main.py  pyproject.toml  timerfd.py  wait_until_timerfd.py  wait_until_win.py  win32event.py
src/sleep_absolute/: __init__.py  _darwin.py  _linux.py  _timer_create.py  _windows.py
tests/: test_wait_until.py
